[metadata]
name = tpDcc-libs-unittests
description = Library to manage unit tests in a DCC agnostic way.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpDcc/tpDcc-libs-unittests

[options]
zip_safe = False
include_package_data = true
packages=find:
install_requires =
    tpDcc-libs-python
    tpDcc-core

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = tpDcc/libs/unittests/_version.py
versionfile_build = tpDcc/libs/unittests/_version.py
tag_prefix = releases/
parentdir_prefix = tpDcc-libs-unittests-releases-